<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yijia.easyimmigrant.MainActivity" >
    
    <item android:id="@+id/action_search"
        android:icon="@drawable/icon_search_red"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_for_sale"
        android:orderInCategory="100"
        android:title="@string/action_for_sale"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:title="@string/action_news"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shopping_cart"
        android:orderInCategory="100"
        android:title="@string/action_shopping_cart"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_my_account"
        android:orderInCategory="100"
        android:title="@string/action_my_account"
        app:showAsAction="never"/>

</menu>
